# BinaryCommunicationProtocol

./: CMakeLists.txt  README.md
include/: CommunicationProtocol.h  Dispatcher.h  DispatcherCallbackProvider.h  EnableFlashMessage.h  Message.h  Messages.h  TiltMotorAngleMessage.h
src/: DispatcherCallbackProvider.cpp  EnableFlashMessage.cpp  MessagesPythonWrapper.cpp  TiltMotorAngleMessage.cpp  main.cpp
